--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,21 +5,21 @@ server:
 
 spring: 
     datasource:
-        url : jdbc:mysql://localhost:3306/sociallogin?userSSL=true
+        url : jdbc:mysql://localhost:3306/sociallogin?useSSL=true
         username : root
         password : root
         testWhileIdle : true
         validationQuery : SELECT 1
 
     jpa:
-        show-sql : true
-        hibernate.dll-auto : update
+        show-sql: true
+        hibernate:
+            ddl-auto: update
+            properties:
+                hibernate:
+                    dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
-        properties:
-            hibernate:
-                dialect : org.hibernate.dialect.MySQL5Dialect
-
-
+        
 ################################### GENERAL ################################### 
 
 
@@ -56,7 +56,7 @@ spring:
                          userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
         app:
              auth:
-               tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+               tokenSecret: 926D96C90030DD58429D2751AC1BPAVM
                tokenExpirationMsec: 864000000
              oauth2:
                # After successfully authenticating with the OAuth2 Provider,
