--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,16 +54,16 @@ spring:
                          authorizationUri: https://www.facebook.com/v3.0/dialog/oauth
                          tokenUri: https://graph.facebook.com/v3.0/oauth/access_token
                          userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
-        app:
-             auth:
-               tokenSecret: 926D96C90030DD58429D2751AC1BPAVM
-               tokenExpirationMsec: 864000000
-             oauth2:
-               # After successfully authenticating with the OAuth2 Provider,
-               # we'll be generating an auth token for the user and sending the token to the
-               # redirectUri mentioned by the frontend client in the /oauth2/authorize request.
-               # We're not using cookies because they won't work well in mobile clients.
-               authorizedRedirectUris:
-                 - http://localhost:4041/oauth2/redirect
-                 - myandroidapp://oauth2/redirect
-                 - myiosapp://oauth2/redirect
+app:
+    auth:
+        tokenSecret: 926D96C90030DD58429D2751AC1BPAVM
+        tokenExpirationMS: 864000000
+    oauth2:
+       # After successfully authenticating with the OAuth2 Provider,
+       # we'll be generating an auth token for the user and sending the token to the
+       # redirectUri mentioned by the frontend client in the /oauth2/authorize request.
+       # We're not using cookies because they won't work well in mobile clients.
+        authorizedRedirectUris:
+            - http://localhost:4041/oauth2/redirect
+            - myandroidapp://oauth2/redirect
+            - myiosapp://oauth2/redirect
